# agent-skeleton

./: .gitignore  Agent presentation.pptx  CLAUDE.md  HACKATHON.md  HACKATHON_CHEATSHEET.md  INTEGRATION_GUIDE.md  README.md  __init__.py  a2a_runtime.py  agent.card.json  base.py  config.py  executor.py  handler_executor.py  llm_loop.py  prompt.py  pyproject.toml  serve.py  spec.py  tool.py  tool_schemas.py  tools.py
core/: __init__.py  a2a_runtime.py  config.py  executor.py  serve.py  spec.py
custom/: INTEGRATION_GUIDE.md  README.md  __init__.py  handler_executor.py
endpoint_wrapper/: README.md  __init__.py  __main__.py  call_endpoint.py  prompts.py  serve_wrapper.py  specs.py
endpoint_wrapper/tests/: test_call_endpoint.py  test_manager.py  test_operations.py
system_tools/: __init__.py  preset_tools.py
tests/: test_executor_metadata.py  test_preset_tools.py  test_wrapper.py
tool_loop/: README.md  __init__.py  prompt.py  tools.py
tool_loop/system_tools/: __init__.py  preset_tools.py
